Add in bullet and bug animations

--- a/HeartAttack/HeartAttack/HeartAttack.csproj
+++ b/HeartAttack/HeartAttack/HeartAttack.csproj
@@ -93,6 +93,7 @@
     <Compile Include="SpriteUpdater.cs" />
     <Compile Include="Timing\Clock.cs" />
     <Compile Include="Timing\ClockManager.cs" />
+    <Compile Include="Timing\SpriteAnimation.cs" />
     <Compile Include="Timing\Timer.cs" />
   </ItemGroup>
   <ItemGroup>
