--- a/HeartAttack/HeartAttack/HeartAttack.csproj
+++ b/HeartAttack/HeartAttack/HeartAttack.csproj
@@ -79,6 +79,7 @@
     <Compile Include="BulletManager.cs" />
     <Compile Include="DirtyGlobalHelpers.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="InputManager.cs" />
     <Compile Include="Scenes\CalmDownScene.cs" />
     <Compile Include="Scenes\CalmingConfigScene.cs" />
     <Compile Include="Scenes\GameOverScene.cs" />
